--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -48,7 +48,8 @@
                        <td>{{ product.price | currency:'USD':'symbol':'1.2-2'}}</td>
                        <td>
                            <pm-star
-                           [rating]='product.starRating'>
+                           [rating]='product.starRating'
+                           (ratingClicked)='onRatingClicked($event)'>
                         </pm-star>
                     </td>
                     </tr>
