--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -4,7 +4,8 @@
     </div>
     <div class='card-footer'>
         <button class='btn btn-outline-secondary'
-                style='width:80px'>
+                style='width:80px'
+                (click)='onBack()'>
                 <i class='fa fa-chevron-left'></i> Back
             </button>
     </div>
